# sol-porpoise

./: .gitignore  AGENTS.md  MISSION-SPEC.md  MISSION.md  README.md  api-1.json  pyproject.toml
adapters/: __init__.py  base.py  dextrabot.py  flash_trade.py  hyperdash.py  hyperliquid.py  imperial.py  kukapay.py  normalizer.py  phantom.py  twitter_news.py  vulcan.py
config/: ai_agent.yaml  risk.yaml  run.yaml  sources.yaml  strategy.yaml  venues.yaml
engine/: __init__.py  __main__.py  ai_agent.py  cross_venue.py  hawk_breakout.py  hypothesis.py  kg.py  mcp_data.py  outcomes.py  paper_orders.py  playbooks.py  report.py  risk.py  run_scan.py  scoring.py  signals.py  skills.py  source_health.py  trial_dashboard.py  volatility.py  weekly_review.py
ledgers/: hypothesis_registry.csv  improvement_backlog.csv  kg_triples.csv  paper_fills.csv  paper_orders.csv  signal_outcomes.csv  skipped_trades.csv  source_health.csv
memory/: adapter_registry.md  durable_lessons.md  failure_modes.md  mission_state.json  promotion_decisions.md
reports/: 2026-06-02T03-49-37_Australia-Sydney_report.md
scripts/: ai_delegate_agent.sh  cron_hourly.sh  evaluate_outcomes.sh  run_scan.sh  trial_start.sh  trial_stop.sh  weekly_review.sh
skills/: README.md
tests/: __init__.py  test_adapters.py  test_ai_agent.py  test_ai_paper_mode.py  test_configs.py  test_cross_area.py  test_end_to_end_trial.py  test_engine.py  test_hawk_breakout.py  test_ledger_schemas.py  test_mcp_data.py  test_memory_files.py  test_modules.py  test_report_template.py  test_scaffold.py  test_skills.py  test_trial.py  (+2 more)
(+12 files in other folders)
